--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>  
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="Style.css">
 
     <script type="text/javascript">
 </script>
@@ -24,6 +24,6 @@
 <!--Additional activity -->
 
     </div>
-<script src="main.js"></script>
+<script src="Main.js"></script>
 </body>
 </html>
