--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>  
-<link rel="stylesheet" type="text/css" href="Style.css">
+<link rel="stylesheet" type="text/css" href="Style.CSS">
 
     <script type="text/javascript">
 </script>
